Feat : Setup Socket.IO environment

--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "@nestjs/core": "^8.0.0",
     "@nestjs/jwt": "^8.0.0",
     "@nestjs/passport": "^8.0.0",
-    "@nestjs/platform-express": "^8.0.0",
+    "@nestjs/platform-express": "^8.4.7",
+    "@nestjs/serve-static": "^3.0.0",
     "@nestjs/typeorm": "^8.0.1",
     "@types/passport-jwt": "^3.0.6",
     "bcryptjs": "^2.4.3",
@@ -34,12 +35,16 @@
     "config": "^3.3.6",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
+    "path": "^0.12.7",
     "pg": "^8.7.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
     "typeorm": "^0.2.34",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "socket.io": "4.6.1",
+    "@nestjs/websockets": "^7.6.15",
+    "@nestjs/platform-socket.io": "^7.6.15"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.0.0",
