--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
     "config": "^3.3.6",
+    "moment": "^2.29.4",
+    "moment-timezone": "^0.5.43",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "path": "^0.12.7",
