--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@nestjs/swagger": "^6.3.0",
     "@nestjs/typeorm": "^8.0.1",
     "@nestjs/websockets": "^7.6.15",
+    "@types/multer": "^1.4.7",
     "@types/passport-jwt": "^3.0.6",
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.4.0",
@@ -39,6 +40,7 @@
     "dotenv": "^16.0.3",
     "moment": "^2.29.4",
     "moment-timezone": "^0.5.43",
+    "multer": "^1.4.5-lts.1",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "path": "^0.12.7",
